--- a/tuto-html.html
+++ b/tuto-html.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
+</head>
+    <header>
+        <!-- titre, menu et tout -->
+    </header>
+    <body>
+        <!-- contenu, tuto html -->        
+    </body>
+    <footer>
+        <!-- copyright et autre -->
+    </footer>
+</html>
