--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<title> TutoCeption - le HTML </title>
+		<meta charset="UTF-8">
     <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
 </head>
     <header>
