--- a/tuto-html.html
+++ b/tuto-html.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
+	<title>test</title>
 </head>
     <header>
         <!-- titre, menu et tout -->
