--- a/tuto-html.html
+++ b/tuto-html.html
@@ -3,12 +3,32 @@
 <head>
     <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
 	<title>test</title>
+    <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
     <header>
         <!-- titre, menu et tout -->
+        <nav>
+            <ul>
+                <li><a href="/index.html">home</a></li>
+                <li><a href="/tuto-html.html">html</a></li>
+                <li><a href="/tuto-css.html">css</a></li>
+            </ul>
+        </nav>
     </header>
     <body>
-        <!-- contenu, tuto html -->        
+        <!-- contenu, tuto html -->
+        <div class="content">
+            <p>
+                Contrairement à ce que beaucoup de monde pense, le HTML n’est pas un langage de programmation, mais de description. On ne programme pas en HTML, on décrit le contenu d’une page aux navigateurs qui la visitent, ces navigateurs se chargent ensuite de l’afficher. <br />
+                Le HTML (pour HyperText Markup Language) est basé sur un système de balises. Si l’on veut afficher par exemple un paragraphe, on va venir créer une balise de début de paragraphe (on dit qu’on ouvre la balise), on tape le contenu du paragraphe, puis on termine en plaçant une balise de fin de paragraphe (on dit qu’on ferme la balise). <br />
+                Exemple : 
+                &lt;p&gt;
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                &lt;p&gt;
+                Il existe un très grand nombre de balises. Nous ne les verrons pas toutes, mais la « bible » du html les regroupe toutes avec des exemples d’usage ici => w3schools
+                Le tutoriel suivant va vous apprendre comment recréer la page que vous avez sous les yeux. TutoCeption.
+            </p>
+        </div>
     </body>
     <footer>
         <!-- copyright et autre -->
