--- a/tuto-html.html
+++ b/tuto-html.html
@@ -3,6 +3,7 @@
 <head>
     <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
 	<title>test</title>
+    <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
     <header>
