fusion avec céline

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 <div id="entete">
                     <h1>Tuto(eption)</h1>
                     <p>
-                        bienvenue blah blah
+                        Vous cherchez un endroit pour apprendre le html/css?<br/> Vous êtes tombé au bon endroit !<br/>
+                        Suivez donc ce tutoriel !
                     </p>
                 </div>
             <!-- contenu, choix entre html et css -->
