--- a/tuto-css.html
+++ b/tuto-css.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-   <link rel="stylesheet" type="text/css" href="css/style.css"/>
-   <meta charset="UTF-8">
-   <title>TutoCeption - CSS</title>
+    <!-- titre, reglages pour google, description et tout ce joyeux bazar -->
+    <title>TutoCeption - CSS</title>
+    <meta charset="utf-8">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
-    <body>
-        <!-- contenu, tuto html -->
-        <div class="content_tuto">
+    <header> 
+    </header> 
+    <body> 
+        <!-- contenu, tuto html --> 
+        <div class="content"> 
             <nav>
                 <ul>
                     <li><a href="index.html">home</a></li>
@@ -16,44 +19,60 @@
                 </ul>
             </nav>
             <div class="page">
-        <p>Le CSS (Cascading Style Sheets) est aussi un langage de présentation qui vient compléter le HTML. C'est elle qui s'occupe de la forme de la page web.<br/><br/> Sa syntaxe est relativement simple. On indique en premier le selector(ID,class, balise), c'est à dire la partie de l'HTML que l'on veut modifier, suivi de ses propriétés. Comme le montre l'exemple:</p> 
-            <img src="images/css1.png"></img>
-        <p>Ici, le Selector est h1 (le titre) et ce dernier sera écrit en bleu</p>
-        <p> Afin d'aller plus vite, on peut regrouper les selectors entre eux surtout si on veut leur appliquer le même style.<br/> En CSS, il est aussi recommander d'utiliser les commentaires /* Commentaire */ </p>
-        <h1>Comment relier le CSS au HTML?</h1>
-            <p>Il existe 3 méthodes pour relier le code CSS à celui du HTML:
+                <p>Le CSS (Cascading Style Sheets) est aussi un langage de présentation qui vient compléter le HTML. C'est elle qui s'occupe de la forme de la page web.<br/><br/> Sa syntaxe est relativement simple. On indique en premier le selector(ID,class, balise), c'est à dire la partie de l'HTML que l'on veut modifier, suivi de ses propriétés. Comme le montre l'exemple:</p>
+                <div class="image" style="max-width: 50% !important;"> 
+                    <img src="images/css1.png"></img>
+                </div>
+                <p>Ici, le sélecteur est h1 (le titre) et ce dernier sera écrit en bleu</p>
+                <p> Afin d'aller plus vite, on peut regrouper les sélecteurs entre eux surtout si on veut leur appliquer le même style.<br/> En CSS, il est aussi recommander d'utiliser les commentaires /* Commentaire */ </p>
+                <h1>Comment relier le CSS au HTML?</h1>
+                <p>Il existe 3 méthodes pour relier le code CSS à celui du HTML:
                 <ul>
                     <li><strong>Style externe</strong>: créer un autre fichier .css et écrire < link rel="stylesheet" type="text/css" href="nomDuFichier" / > dans la balise < head > du fichier HTML.</li>
                     <li><strong>Style interne</strong>: vous pouvez écrire directement votre code CSS dans l'entête HTML. </li>
                     <li><strong>Style dans les balises</strong>: il est possible d'appliquer du CSS directement dans les balises avec l'attribut style</li>
                 </ul></p>
-        <h1> Les couleurs </h1>
-            <p>Pour indiquer une couleur vous pouvez indiquer le nom (red,green,blue..) en RGB(valeur Rouge, valeur Verte, valeur Bleue) ou en héxadécimale (#FF7F50 pour Coral)</p>
-        <h1>Les propriétés</h1>
-            <p>Vous connaissez déjà une propriété.. Si, si je vous jure! C'est la propriété <strong>color.</strong></p>Elle permet d'affecter une couleur.<br/> Pour la couleur de fond c'est la propriété <strong>background-color</strong>
-            <h3>Les bordures</h3>
-                <p>Pour encadrer du contenu de manière plus esthétique, on utilise <strong>border: épaisseur en pixel type de bordure(pointillet, tiret..) et la couleur</strong></p>
+                <h1> Les couleurs </h1>
+                <p>Pour indiquer une couleur vous pouvez indiquer le nom (red,green,blue..) en RGB(valeur Rouge, valeur Verte, valeur Bleue) ou en héxadécimale (#FF7F50 pour Coral)</p>
 
-            <h3>Les Marges</h3>
-                <p><strong>margin-top/bottom/right/left</strong></p>
 
-            <h3>Texte</h3>
-                <p></p>
+                <h1>Les propriétés</h1>
+                <p>Vous connaissez déjà une propriété.. Si, si je vous jure! C'est la propriété <strong>color.</strong></p>Elle permet d'affecter une couleur.<br/> Pour la couleur de fond c'est la propriété <strong>background-color</strong>
 
-            <h3>Les fonts</h3>
-                <p></p>
 
-            <h3>Les tableaux</h3>
-                <p></p>
+                <h3>Les fonts</h3>
+                <p>Il est possible de modifier la forme de l'écriture grâce à <strong>font-style</strong>, par exemple si on veut écrire en italique on utilisera <strong>font-style:italic</strong>, en oblique avec <strong>font-size:oblique</strong> ou en normal <strong>font-size:normal</strong> </p>
 
-            <h3>Le modèle de boîte CSS</h3>
-                <p></p>
 
-            <h3>Les DIV</h3>
-                <p></p>
+                <h3>Le texte</h3>
+                <p>Pour aligner un texte en CSS, on utilise <strong>text-align</strong> avec comme valeurs <strong>center,left,right.</strong><<br/> Ce qui donne: <strong>h4{text-align:left;}</strong></p>
 
-            <h3>La propriété float</h3>
-                <p></p>
+
+
+                <h3>Le float</h3>
+                <p><strong>float</strong> en français veut dire <strong>flottant</strong>cette propriété permet de faire flotter une image à n'importe quel endroit d'un texte. Cette propriété est complétée avec les valeurs <strong>left</strong> ou <strong>right.</strong><br/>Elle s'écrira donc ainsi: 
+                <strong>img { float:left; }</strong></p>
+
+
+                <h3>Les bordures</h3>
+                <p>Pour encadrer du contenu de manière plus esthétique, on utilise <strong>border</strong> pour modifier la largeur, la couleur ou le type de bordure(tiret,pointillet..) que l'on souhaite voir apparaître.</p>
+                    <ul>
+                        <li><strong>border-width:</strong> modifie la largeur en pixel</li>
+                        <li><strong>border-color:</strong> modifie la couleur avec le nom, en hexadécimale ou en RBG comme pour la propriété <strong>color</strong> vue précédemment. </li>
+                        <li><strong>border-style:</strong> modifie le type de bordure et s'offre à vous un éventail de choix comme:<br/> dotted(pointillés), dashed(tirets), solid(trait), double, groove(relief)...
+                        </li>
+                    </ul>
+
+
+                <h3>Les Marges</h3>
+                <p>Lorsqu'on rédige un texte dans un bloc, on peut déterminer la marge <strong>intérieure</strong> (entre le texte et la bordure) et la marge <strong>extérieure </strong>(entre 2 blocs différents) pour plus de visibilité. On utilise la propriété <strong>margin</strong> pour modifier la marge extérieure et <strong>padding</strong> pour l'intérieure, en pixel. Il est possible d'être plus précis en couplant la <strong>margin</strong> avec des valeurs comme <strong>top,bottom,right,left.</strong><br/> On aura donc: <strong>p { margin-top:120px}</strong> </p>
+
+
+                <h3>Le modèle des boîtes</h3>
+                <p>Avec ce que nous avions vu précédemment, il est possible de modifier tout et n'importe quoi sur une page web. Le modèle des boîtes permet de positionner les différents blocs contenus sur la page. Grâce aux notions de marges, bordures, block, inline. Wait wat? Block?Inline?<br/> AHEM! La balise <strong>block</strong> en HTML, permet de délimiter les paragraphes entre eux  autrement dit elle crée des blocs et les place l'un au dessus de l'autre. Quant à la balise <strong>inline</strong>, elle permet de placer des textes en ligne, l'un à côté de l'autre. </p>
+            <!-- METS UN EXEMPLE DE CE MODELE, jore une image -->
+
+        </div>
     </body>
     <footer>
         <!-- copyright et autre -->
